# dwcom

./: README.md  __init__.py  changelog.md  config.py  dwcom.py  fileRandomizer.py  logger.py  notifiers.py  pyproject.toml  requirements.txt  speech.py
audio/: manager.py  pool.py  sound.py
