[project]
name = "dwcom"
version = "0.1.0"
description = "A trigger that adds several features to the TeamTalk commander."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accessible-output3>=0.1.2",
    "cyal>=0.4.5",
    "notify-py>=0.3.43",
    "ntfpy>=0.0.12",
    "pyprowl>=3.0.1",
    "rpaudio>=0.0.18",
    "soundfile>=0.13.1",
]


